# spacemap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  install.sh
docs/: index.html
src/: bounded_heap.rs  cache.rs  categorize.rs  checkpoint.rs  cli.rs  collector.rs  compare.rs  config.rs  duplicates.rs  main.rs  output.rs  parallel_scanner.rs  path_pool.rs  progress.rs  scanner.rs  sharded_collector.rs  types.rs
