[package]
name = "spacemap"
version = "1.0.2"
edition = "2021"
authors = ["Chris Alexiuk"]
description = "A beautiful CLI tool for analyzing disk space usage with rich terminal visualizations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chris-alexiuk/spacemap"
keywords = ["disk", "storage", "cli", "filesystem", "analyzer"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
colored = "2.1"
humansize = "2.1"
chrono = "0.4"
is-terminal = "0.1"
sysinfo = "0.33"
